--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mongoose": "^5.1.0",
     "node-fetch": "^2.1.2",
     "serve-static": "^1.13.2",
+    "shuffle-array": "^1.0.1",
     "vk-io": "^4.0.0-beta.8"
   },
   "scripts": {
