--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "fastify": "^1.4.0",
     "fastify-auth": "^0.2.0",
     "fastify-static": "^0.11.0",
+    "md5": "^2.2.1",
     "mongoose": "^5.1.0",
     "node-fetch": "^2.1.2",
     "serve-static": "^1.13.2",
     "shuffle-array": "^1.0.1",
+    "uuid": "^3.2.1",
     "vk-io": "^4.0.0-beta.8"
   },
   "scripts": {
