--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "urussu-backend",
   "version": "0.1.0",
   "dependencies": {
-    "cors": "^2.8.4",
+    "aws-sdk": "^2.453.0",
+    "cors": "^2.8.5",
     "crawler": "^1.2.0",
-    "fastify": "^1.12.1",
-    "fastify-auth": "^0.2.0",
-    "fastify-static": "^0.11.0",
+    "fastify": "^2.3.0",
+    "fastify-auth": "^0.5.0",
+    "fastify-multer": "^1.4.2",
+    "fastify-static": "^2.4.0",
     "md5": "^2.2.1",
     "mongoose": "^5.3.1",
     "node-fetch": "^2.2.0",
-    "serve-static": "^1.13.2",
+    "pump": "^3.0.0",
     "shuffle-array": "^1.0.1",
     "uuid": "^3.3.2",
     "vk-io": "^4.0.0-rc.5"
